//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris.q;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris.q";
option java_outer_classname = "ProjectionsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";
import "spine/net/url.proto";
import "javaclasses/exlibris/values.proto";
import "javaclasses/exlibris/model.proto";
import "javaclasses/exlibris/identifiers.proto";
import "javaclasses/exlibris/q/values.proto";

// Appears after click on a book cover like a pop-up dialog.
//
message BookDetailsView {

    // The short book information.
    BookItem book_item = 1;

    // The full book synopsis.
    BookSynopsis book_synopsis = 2;
}

// The view with a list of categories.
//
message CategoriesView {

    // A list of categories.
    repeated Category categories = 1;
}

// The view with a compact information about book loans.
//
// The ibrarian sees all user’s loan periods.
//
message BookCompactHistory {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The list of user's loan details.
    repeated LoanDetails loans = 2;
}

// The view with a full information about book records.
//
// The librarian sees all users that borrow a book,
// reserve, lost, return, or extend a loan period with a date of an every record.
//
message BookFullHistory {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // The list of the inventory item record.
    repeated InventoryItemRecord inventory_item_record = 2;
}

// The extended information about a book.
//
// The view contains a book information:
// URL cover, book title, authors, ISBN, year of publication,
// categories, and synopsis.
//
message BookExtendedView {

    // The book identifier.
    BookId book_id = 1;

    // The URL for a book cover.
    spine.net.Url book_cover_url = 2;

    // The book title.
    BookTitle title = 3;

    // The list of authors’ names.
    AuthorName author_names = 4;

    // The value that generated from an ISBN.
    Isbn62 isbn = 5;

    // The year of the publication of a book.
    Year year = 6;

    // The list of categories.
    repeated Category categories = 7;

    // The full book synopsis.
    BookSynopsis book_synopsis = 8;
}

// The inventory state of a particular book.
//
message InventoryByBookView {

    // The information about a book loan.
    InventoryDetails inventory_details = 1;
}

// The view with information about an inventory.
//
// View contains fields with a book title, authors,
// available books, and amount of the overdue books.
//
message InventoryView {

    // The list of inventory details.
    repeated InventoryDetails inventory_details = 1;
}

// The wiew with information about lost books.
//
message LostBookView {

    // The list of all books that were lost.
    repeated LostBook lost_books = 1;
}

// All particular users and their summary.
//
message ReadersView {

    // The list of a specific user’s summary.
    repeated UserDetails user_details = 1;
}

// The information about a user.
//
message UserDetails {

    // The identifier of a user.
    UserId user_id = 1;

    // The name of a in the library.
    string username = 2;

    // The count of borrowed by a user books now.
    int32 count_of_borrowed_books = 3;

    // The count of reserved by a user books now.
    int32 count_of_reserved_books = 4;

    // The count of books that a user return with lateness or hasn’t return at all.
    int32 count_of_overdue_books = 5;
}

// Contains the information about all reservations of a particular book.
//
message ReservationView {

    // The identifier of an inventory.
    InventoryId inventory_id = 1;

    // Details of a reservation.
    ReservationDetails reservation_details = 2;
}

// The full user’s history includes all user’s events.
//
// Events:
//
// 1. Borrowed.
// 2. Reserved.
// 3. Loan period extended.
// 4. Returned.
// 5. Lost.
//
message ExtendedUserHistoryView {

    // The  identifier of a user.
    UserId user_id = 1;

    // The collection of all user’s actions.
    repeated InventoryItemRecord inventory_item_record = 2;
}

// The compact version of the a user history.
//
// Contains all user's loans.
//
message CompactUserHistoryView {

    // Details contains a taken on, due on, and returned on date.
    repeated LoanDetailsHistory loan_details = 1;
}

// The view that contains a book cover.
//
message CoverView {

    // The book identifier.
    BookId book_id = 1;

    // The URL for a book cover.
    spine.net.Url book_cover_url = 2;
}
